updates doc and package to v1.1.0

--- a/templates/wpkit.json.tmpl
+++ b/templates/wpkit.json.tmpl
@@ -9,7 +9,17 @@
   ],
   "local": {
     "url": "",
-    "path": "",
+    "dbName": "",
+    "dbUser": "",
+    "dbPass": ""
+  },
+  "production": {
+    "host": "",
+    "username": "",
+    "url": "",
+    "branch": "",
+    "privatePath": "",
+    "publicPath": "",
     "dbName": "",
     "dbUser": "",
     "dbPass": ""
